Fixed layout issues on components, added some embeds

--- a/_sass/components/_components.breadcrumbs.scss
+++ b/_sass/components/_components.breadcrumbs.scss
@@ -1,5 +1,5 @@
 .c-breadcrumb {
-  margin-bottom: 8px;
+  margin-bottom: $inuit-global-spacing-unit-tiny;
   @include mq($until: tablet) {
     display:none;
   }
